checkout(hampir selesai)
kalau checkout ga bisa, coba install "composer require kodepandai/laravel-rajaongkir"

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "haruncpi/laravel-id-generator": "^1.1",
         "intervention/image": "^2.7",
+        "kodepandai/laravel-rajaongkir": "^3.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7"
