--- a/.env
+++ b/.env
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RAJAONGKIR_KEY="24cd1cef06ae8acad38717e780097342"
+RAJAONGKIR_TYPE= "starter"
